objects/CameleonCPQ__Contract__c.object
<CustomObject>
    <description>PROS Smart CPQ Contract</description>
    <fields>
        <fullName>CameleonCPQ__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account ID</description>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contract_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact ID</description>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contract_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ContractEndDate__c</fullName>
        <description>Contract end date</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ContractStartDate__c</fullName>
        <description>Contract start date</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ContractType__c</fullName>
        <description>Contract type</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ExpirationAlert__c</fullName>
        <description>The number of days before expiration for sending an alert to the customer</description>
        <label>Expiration Alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ParentContractId__c</fullName>
        <description>ID of the parent contract (MasterContract)</description>
        <label>Parent Contract</label>
        <referenceTo>CameleonCPQ__MasterContract__c</referenceTo>
        <relationshipLabel>PROS Contracts</relationshipLabel>
        <relationshipName>Contract_ParentContract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PartnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner ID</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Contracts (Partner Id)</relationshipLabel>
        <relationshipName>Contract_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cameleon Quote ID</description>
        <label>Quote</label>
        <referenceTo>CameleonCPQ__Quote__c</referenceTo>
        <relationshipLabel>PROS Contracts</relationshipLabel>
        <relationshipName>Contract_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__RenewalType__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PROS Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>